fix: dark mode fix

--- a/zero-to-mil/src/app/globals.css
+++ b/zero-to-mil/src/app/globals.css
@@ -33,6 +33,7 @@
 
   .root {
     --background: 226 68% 7%;
+    --black: 0 0 0%;
     --cardtitle: 225 16% 61%;
     --betcard: 225 29% 19%;
     --secondrybetcard: 225 29% 21%;
@@ -47,7 +48,6 @@
     --primary-foreground: 0 0% 100%;
     --secondary: 24 100% 50%;
     --secondary-foreground: 0 0% 100%;
-
     --muted: 0 0% 38%;
     --muted-foreground: 215 20.2% 65.1%;
     --disabled: 0 0% 62%;
@@ -71,6 +71,8 @@
     --chart-3: 30 80% 55%;
     --chart-4: 280 65% 60%;
     --chart-5: 340 75% 55%;
+    --success: 142 76% 36%;
+    --warning: 45 100% 50%;
   }
 
   @media (prefers-color-scheme: dark) {
@@ -122,9 +124,11 @@
 
   .dark {
     --background: 226 68% 7%;
+    --black: 0 0 0%;
     --cardtitle: 225 16% 61%;
     --betcard: 225 29% 19%;
     --secondrybetcard: 225 29% 21%;
+    --greenbetcard: 185 81% 16%;
     --foreground: 0 0% 100%;
     --greyf: 0 0% 64%;
     --card: 222.2 84% 4.9%;
